--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,8 @@
         "laravel/tinker": "^2.5",
         "lee-to/laravel-thumbnails": "^1.0",
         "lee-to/moonshine-tree-resource": "^0.1.1",
-        "moonshine/moonshine": "^1.60",
-        "unisharp/laravel-filemanager": "^2.6"
+        "unisharp/laravel-filemanager": "^2.6",
+        "moonshine/moonshine": "*"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.8",
@@ -65,5 +65,17 @@
         "sort-packages": true
     },
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "repositories": [
+        {
+            "type": "path",
+            "url": "packages/moonshine",
+            "options": {
+                "versions": {
+                    "moonshine/moonshine": "1.*.*-dev"
+                },
+                "symlink": true
+            }
+        }
+    ]
 }
